--- a/git.html
+++ b/git.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ぎっどだどん！</h1>
+    <h1>test</h1>
     <p>gitの授業です</p>
     <p>ぎっどぎど</p>
-    <p>gitgit</p>
+    <p>aaaa</p>
 </body>
 </html>
